<resources>
    <string name="app_name">CJ Security</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="optional">Optional</string>
    <string name="emergency_contact_one">Emergency Contact 1</string>
    <string name="emergency_contact_two">Emergency Contact 2</string>
    <string name="special_condition">Do you have any special conditions you\'d like to report?eg. Allergies, Diabetes etc</string>
    <string name="name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="relation">Relation</string>
</resources>