<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblAATitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Add Account Form"
        android:textColor="@color/sky_blue"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAATitle"
        android:background="@drawable/title_bottom_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="100" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal"
                android:weightSum="100" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:src="@drawable/inner_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="80"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edAACustomerId"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Agent Number"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAName"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Full Name"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAAddress"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Street"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAArea"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Town / City"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAZipcode"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Post Code"
                    android:inputType="numberSigned"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAPhone"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Phone No."
                    android:inputType="numberSigned"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAMail"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Email ID"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edAAPassword"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />

            
                <TextView 
                    android:id="@+id/add_account_optional_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/optional"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"/>
                
                 <TextView 
                    android:id="@+id/add_account_emergency_contact_one_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/emergency_contact_one"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"/>
                 
                 <EditText
                    android:id="@+id/add_account_emergency_contact_one_name"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
                 
                 <EditText
                    android:id="@+id/add_account_emergency_contact_one_contact"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
                 
                 <EditText
                    android:id="@+id/add_account_emergency_contact_one_relation"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="@string/relation"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
            
                 <TextView 
                    android:id="@+id/add_account_emergency_contact_two_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/emergency_contact_two"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"/>
                 
                 <EditText
                    android:id="@+id/add_account_emergency_contact_two_name"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
                 
                 <EditText
                    android:id="@+id/add_account_emergency_contact_two_contact"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
                 
                 <EditText
                    android:id="@+id/add_account_emergency_contact_two_relation"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:hint="@string/relation"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
                 
                 <TextView 
                    android:id="@+id/add_account_special_condition_label"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/special_condition"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"/>
                 
                <EditText
                    android:id="@+id/add_account_special_condition"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textbox_without_hover"
                    android:inputType="text"
                    android:lines="8" 
   					android:minLines="6" 
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
                 
                <Button
                    android:id="@+id/btnSubmitAddAccount"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/black_button"
                    android:text="Add Account"
                    android:textColor="@color/White"
                    android:textSize="15dp" />
                 
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/sky_blue" >
        
            <TextView
		        android:id="@+id/txtAATerms"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:paddingBottom="10dp"
		        android:paddingTop="10dp"
		        android:text="Terms &amp; Conditions"
		        android:textColor="@color/White" />
            
            
    </RelativeLayout>

</RelativeLayout>